Fix: orders dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,13 @@ body.dark .users-table tr:hover {
   cursor: pointer;
   background-color: #333; 
 }
+body.dark .orders-table th {
+  background-color: #121212; 
+}
+body.dark .orders-table tr:hover {
+  cursor: pointer;
+  background-color: #333; 
+}
 
 @media screen and (max-width: 1300px) {
   .content {
