--- a/src/components/Orders/orders.css
+++ b/src/components/Orders/orders.css
@@ -22,9 +22,13 @@
 .orders-table th {
     background-color: #f2f2f2;
 }
-.orders-table tr:nth-child(even) {
+.orders-table tr:hover {
+    cursor: pointer;
     background-color: #f2f2f2;
 }
+/* .orders-table tr:nth-child(even) {
+    background-color: #f2f2f2;
+} */
 .orders-table select {
     padding: 5px 10px;
     border-radius: 5px;
